--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+Version 0.2.0:
+ - ch
+ - Merge tag '0.1.0' into develop
+ - Merge branch 'r-0.1.0'
+
 Version 0.1.0
  - buchhaltung
  - adding index page
