--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,6 @@
+Version 0.4.1:
+
+
 Version 0.4.0:
  - add spa: ase-sms-front, docker:11
  - module settings adapted in lang.java.d module of gh.rogeraaut.d/rogeraaut.github.io project
